--- a/html_and_css/individual_solutions/andy_glass/exercise2/exercise 2.html
+++ b/html_and_css/individual_solutions/andy_glass/exercise2/exercise 2.html
@@ -53,10 +53,12 @@
     <h3 class="section">Structural Markup</h3>
 
     <h4 class="exercise">Headings</h4>
-    One - Main Heading    Two - Sub Heading 1    Three - Sub Heading 2    Four - Sub Heading 3    Five - Sub Heading 4    Six - Sub Heading 5
+    <h1>One - Main Heading</h1>    <h2>Two - Sub Heading 1</h2>    <h3>Three - Sub Heading 2</h3>    <h4>Four - Sub Heading 3</h4>    <h5>Five - Sub Heading 4</h5>    <h6>Six - Sub Heading 5</h6>
 
     <h4 class="exercise">Paragraphs</h4>
-    paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph two paragraph two paragraph two <br/>paragraph two paragraph two paragraph two paragraph two paragraph two <br/>paragraph two paragraph two paragraph two paragraph two paragraph two <br/>paragraph two paragraph two paragraph two paragraph two paragraph two <br/>
+    <p>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one paragraph one paragraph one paragraph one <br/>paragraph one paragraph one</p>
+    <br/>
+    <p>paragraph two paragraph two paragraph two <br/>paragraph two paragraph two paragraph two paragraph two paragraph two <br/>paragraph two paragraph two paragraph two paragraph two paragraph two <br/>paragraph two paragraph two paragraph two paragraph two paragraph two <br/></p>
 
     <h4 class="exercise">Bold</h4>
     <p><b>Make me bold</b></p>
@@ -92,6 +94,8 @@
     ccccccccccccccc<br />
     ccccccccccccccc<br />
     ccccccccccccccc<br />
+    <br />
+    <br />
     ccccccccccccccc<br />
     ccccccccccccccc<br />
     ccccccccccccccc<br />
@@ -114,7 +118,7 @@
     <h4 class="exercise">Blockquote</h4>
     <p>Blockquote Ed's favorite joke. Bonus points for making it a fixed width and centering it in the page.</p><br />
     <br />
-    <blockquote><p>Theres a blonde, a brunette, and a redhead, and they're all running from the police. They run to an old barn and hide in potato sacks. The cop chasing them walks into the barn looking for them. He kicks the first sack, with the redhead inside, and the redhead says 'Woof!' The cop thinks it's a dog, so walks to the next one. He kicks the second bag, with the brunette, and she says 'Meow.' The cop thinks it's a cat, and moves on. He kicks the third bag, with the blonde, and the blonde yells 'Potatooooo!'</p></blockquote>
+    <p><blockquote style="width:500px; margin: 0 auto">Theres a blonde, a brunette, and a redhead, and they're all running from the police. They run to an old barn and hide in potato sacks. The cop chasing them walks into the barn looking for them. He kicks the first sack, with the redhead inside, and the redhead says 'Woof!' The cop thinks it's a dog, so walks to the next one. He kicks the second bag, with the brunette, and she says 'Meow.' The cop thinks it's a cat, and moves on. He kicks the third bag, with the blonde, and the blonde yells 'Potatooooo!'</blockquote></p>
 
     <h4 class="exercise">Quote</h4>
     <p>Quote the following lines:</p><br />
