--- a/html_and_css/individual_solutions/andy_glass/exercise4.html
+++ b/html_and_css/individual_solutions/andy_glass/exercise4.html
@@ -6,7 +6,7 @@
 <ol>
   <li>URL Stands for Uniform Resource Locator</li>
   <li>  <a href ="another_file.html" target ="_blank">link to other file</a></li>
-  <li>Go to "another_file.html", The secret code from "another_file.html" is</li>
+  <li>Go to "another_file.html", The secret code from "another_file.html" is Accusamus nibh</li>
   <li>Eget tortor, sed nec varius pellentesque elit ultrices lacus, integer ac sollicitudin nunc rutrum, eros urna integer purus ut, quis erat donec id. Quis pulvinar quis ultricies tempor ultricies sed, in aliquam wisi magna ornare sed, morbi fringilla posuere eros sed purus. Parturient ut cras, lorem quis pede aenean tristique mauris incidunt, accumsan felis feugiat fringilla nulla mauris, eget nibh ullamcorper turpis ac et, tincidunt suspendisse nec nunc porta eget. Iaculis aliquet eget justo. Libero integer adipiscing, penatibus dis nisl erat odio lobortis etiam, dignissim in, commodo enim praesent. Turpis lacus nibh id viverra vel, vitae saepe etiam a odio sed, mauris urna nisl. Vel nec, quisque at tristique enim. Amet velit sem commodo vestibulum, dui augue fermentum wisi mauris, maecenas exercitationem justo. Tellus sed lorem vitae mauris neque, est id, sed non nisl odio. Arcu varius eleifend, neque wisi sed eget quis nullam integer, mattis et leo rutrum ullamcorper, et vivamus nonummy lacinia viverra tortor in. Eget neque cum, nec pede elit non, tincidunt sed integer ipsum dui mattis vestibulum, tellus non dolor gravida diam vel nec, ac sed ullamcorper praesent elit morbi.</li>
 
   <li>BONUS: Make the link to "another_file.html" open in a new window</li>
